updated catalogs to not use simplcache which requires permission

--- a/cook_inlet_catalogs/catalogs/ctd_transects_barabara_to_bluff_2002_2003.yaml
+++ b/cook_inlet_catalogs/catalogs/ctd_transects_barabara_to_bluff_2002_2003.yaml
@@ -11,28 +11,14 @@ aliases:
   Cruise 8: Cruise 8
   Cruise 9: Cruise 9
 data:
-  1ee5461a39ae5e7a:
+  7cec9a7bfdd2fa74:
     datatype: intake.readers.datatypes:CSV
     kwargs:
       storage_options: null
-      url: simplecache://::https://researchworkspace.com/files/42396691/barabara.csv
+      url: https://researchworkspace.com/files/42396691/barabara.csv
     metadata: {}
     user_parameters: {}
 entries:
-  5ff4f93fb6f993f0:
-    kwargs:
-      args:
-      - '{data(1ee5461a39ae5e7a)}'
-      parse_dates:
-      - date_time
-      storage_options:
-        simplecache:
-          cache_storage: /home/kristen/.cache/cook-inlet-catalogs
-          same_names: true
-    metadata: {}
-    output_instance: pandas:DataFrame
-    reader: intake.readers.readers:PandasCSV
-    user_parameters: {}
   Cruise 1:
     kwargs:
       out_instances:
@@ -40,7 +26,7 @@ entries:
       - pandas:DataFrame
       - pandas:DataFrame
       steps:
-      - - '{data(5ff4f93fb6f993f0)}'
+      - - '{data(c9dbefd12ed0f225)}'
         - []
         - {}
       - - '{func(intake.readers.convert:GenericFunc)}'
@@ -73,12 +59,12 @@ entries:
           height: 300
           hover_cols:
           - date_time
+          - distance [km]
           - Station
           - Depth (m)
-          - Long (E)
-          - distance [km]
           - Lat (N)
           - Temperature (C)
+          - Long (E)
           kind: scatter
           shared_axes: false
           title: 'Cruise 1: 2002-07-23 08:28:00'
@@ -93,19 +79,19 @@ entries:
           height: 300
           hover_cols:
           - date_time
+          - distance [km]
           - Station
           - Depth (m)
-          - Long (E)
-          - distance [km]
           - Lat (N)
           - Temperature (C)
+          - Long (E)
           kind: scatter
           shared_axes: false
           title: 'Cruise 1: 2002-07-23 08:28:00'
           width: 500
           x: distance [km]
           y: Depth (m)
-      urlpath: simplecache://::https://researchworkspace.com/files/42396691/barabara.csv
+      urlpath: https://researchworkspace.com/files/42396691/barabara.csv
     output_instance: pandas:DataFrame
     reader: intake.readers.convert:Pipeline
     user_parameters: {}
@@ -116,7 +102,7 @@ entries:
       - pandas:DataFrame
       - pandas:DataFrame
       steps:
-      - - '{data(5ff4f93fb6f993f0)}'
+      - - '{data(c9dbefd12ed0f225)}'
         - []
         - {}
       - - '{func(intake.readers.convert:GenericFunc)}'
@@ -149,12 +135,12 @@ entries:
           height: 300
           hover_cols:
           - date_time
+          - distance [km]
           - Station
           - Depth (m)
-          - Long (E)
-          - distance [km]
           - Lat (N)
           - Temperature (C)
+          - Long (E)
           kind: scatter
           shared_axes: false
           title: 'Cruise 10: 2003-05-19 13:17:00'
@@ -169,19 +155,19 @@ entries:
           height: 300
           hover_cols:
           - date_time
+          - distance [km]
           - Station
           - Depth (m)
-          - Long (E)
-          - distance [km]
           - Lat (N)
           - Temperature (C)
+          - Long (E)
           kind: scatter
           shared_axes: false
           title: 'Cruise 10: 2003-05-19 13:17:00'
           width: 500
           x: distance [km]
           y: Depth (m)
-      urlpath: simplecache://::https://researchworkspace.com/files/42396691/barabara.csv
+      urlpath: https://researchworkspace.com/files/42396691/barabara.csv
     output_instance: pandas:DataFrame
     reader: intake.readers.convert:Pipeline
     user_parameters: {}
@@ -192,7 +178,7 @@ entries:
       - pandas:DataFrame
       - pandas:DataFrame
       steps:
-      - - '{data(5ff4f93fb6f993f0)}'
+      - - '{data(c9dbefd12ed0f225)}'
         - []
         - {}
       - - '{func(intake.readers.convert:GenericFunc)}'
@@ -225,12 +211,12 @@ entries:
           height: 300
           hover_cols:
           - date_time
+          - distance [km]
           - Station
           - Depth (m)
-          - Long (E)
-          - distance [km]
           - Lat (N)
           - Temperature (C)
+          - Long (E)
           kind: scatter
           shared_axes: false
           title: 'Cruise 11: 2003-06-21 11:20:00'
@@ -245,19 +231,19 @@ entries:
           height: 300
           hover_cols:
           - date_time
+          - distance [km]
           - Station
           - Depth (m)
-          - Long (E)
-          - distance [km]
           - Lat (N)
           - Temperature (C)
+          - Long (E)
           kind: scatter
           shared_axes: false
           title: 'Cruise 11: 2003-06-21 11:20:00'
           width: 500
           x: distance [km]
           y: Depth (m)
-      urlpath: simplecache://::https://researchworkspace.com/files/42396691/barabara.csv
+      urlpath: https://researchworkspace.com/files/42396691/barabara.csv
     output_instance: pandas:DataFrame
     reader: intake.readers.convert:Pipeline
     user_parameters: {}
@@ -268,7 +254,7 @@ entries:
       - pandas:DataFrame
       - pandas:DataFrame
       steps:
-      - - '{data(5ff4f93fb6f993f0)}'
+      - - '{data(c9dbefd12ed0f225)}'
         - []
         - {}
       - - '{func(intake.readers.convert:GenericFunc)}'
@@ -301,12 +287,12 @@ entries:
           height: 300
           hover_cols:
           - date_time
+          - distance [km]
           - Station
           - Depth (m)
-          - Long (E)
-          - distance [km]
           - Lat (N)
           - Temperature (C)
+          - Long (E)
           kind: scatter
           shared_axes: false
           title: 'Cruise 2: 2002-09-07 11:05:00'
@@ -321,19 +307,19 @@ entries:
           height: 300
           hover_cols:
           - date_time
+          - distance [km]
           - Station
           - Depth (m)
-          - Long (E)
-          - distance [km]
           - Lat (N)
           - Temperature (C)
+          - Long (E)
           kind: scatter
           shared_axes: false
           title: 'Cruise 2: 2002-09-07 11:05:00'
           width: 500
           x: distance [km]
           y: Depth (m)
-      urlpath: simplecache://::https://researchworkspace.com/files/42396691/barabara.csv
+      urlpath: https://researchworkspace.com/files/42396691/barabara.csv
     output_instance: pandas:DataFrame
     reader: intake.readers.convert:Pipeline
     user_parameters: {}
@@ -344,7 +330,7 @@ entries:
       - pandas:DataFrame
       - pandas:DataFrame
       steps:
-      - - '{data(5ff4f93fb6f993f0)}'
+      - - '{data(c9dbefd12ed0f225)}'
         - []
         - {}
       - - '{func(intake.readers.convert:GenericFunc)}'
@@ -377,12 +363,12 @@ entries:
           height: 300
           hover_cols:
           - date_time
+          - distance [km]
           - Station
           - Depth (m)
-          - Long (E)
-          - distance [km]
           - Lat (N)
           - Temperature (C)
+          - Long (E)
           kind: scatter
           shared_axes: false
           title: 'Cruise 3: 2002-09-25 11:55:00'
@@ -397,19 +383,19 @@ entries:
           height: 300
           hover_cols:
           - date_time
+          - distance [km]
           - Station
           - Depth (m)
-          - Long (E)
-          - distance [km]
           - Lat (N)
           - Temperature (C)
+          - Long (E)
           kind: scatter
           shared_axes: false
           title: 'Cruise 3: 2002-09-25 11:55:00'
           width: 500
           x: distance [km]
           y: Depth (m)
-      urlpath: simplecache://::https://researchworkspace.com/files/42396691/barabara.csv
+      urlpath: https://researchworkspace.com/files/42396691/barabara.csv
     output_instance: pandas:DataFrame
     reader: intake.readers.convert:Pipeline
     user_parameters: {}
@@ -420,7 +406,7 @@ entries:
       - pandas:DataFrame
       - pandas:DataFrame
       steps:
-      - - '{data(5ff4f93fb6f993f0)}'
+      - - '{data(c9dbefd12ed0f225)}'
         - []
         - {}
       - - '{func(intake.readers.convert:GenericFunc)}'
@@ -453,12 +439,12 @@ entries:
           height: 300
           hover_cols:
           - date_time
+          - distance [km]
           - Station
           - Depth (m)
-          - Long (E)
-          - distance [km]
           - Lat (N)
           - Temperature (C)
+          - Long (E)
           kind: scatter
           shared_axes: false
           title: 'Cruise 4: 2002-11-11 14:45:00'
@@ -473,19 +459,19 @@ entries:
           height: 300
           hover_cols:
           - date_time
+          - distance [km]
           - Station
           - Depth (m)
-          - Long (E)
-          - distance [km]
           - Lat (N)
           - Temperature (C)
+          - Long (E)
           kind: scatter
           shared_axes: false
           title: 'Cruise 4: 2002-11-11 14:45:00'
           width: 500
           x: distance [km]
           y: Depth (m)
-      urlpath: simplecache://::https://researchworkspace.com/files/42396691/barabara.csv
+      urlpath: https://researchworkspace.com/files/42396691/barabara.csv
     output_instance: pandas:DataFrame
     reader: intake.readers.convert:Pipeline
     user_parameters: {}
@@ -496,7 +482,7 @@ entries:
       - pandas:DataFrame
       - pandas:DataFrame
       steps:
-      - - '{data(5ff4f93fb6f993f0)}'
+      - - '{data(c9dbefd12ed0f225)}'
         - []
         - {}
       - - '{func(intake.readers.convert:GenericFunc)}'
@@ -529,12 +515,12 @@ entries:
           height: 300
           hover_cols:
           - date_time
+          - distance [km]
           - Station
           - Depth (m)
-          - Long (E)
-          - distance [km]
           - Lat (N)
           - Temperature (C)
+          - Long (E)
           kind: scatter
           shared_axes: false
           title: 'Cruise 5: 2002-12-11 16:39:00'
@@ -549,19 +535,19 @@ entries:
           height: 300
           hover_cols:
           - date_time
+          - distance [km]
           - Station
           - Depth (m)
-          - Long (E)
-          - distance [km]
           - Lat (N)
           - Temperature (C)
+          - Long (E)
           kind: scatter
           shared_axes: false
           title: 'Cruise 5: 2002-12-11 16:39:00'
           width: 500
           x: distance [km]
           y: Depth (m)
-      urlpath: simplecache://::https://researchworkspace.com/files/42396691/barabara.csv
+      urlpath: https://researchworkspace.com/files/42396691/barabara.csv
     output_instance: pandas:DataFrame
     reader: intake.readers.convert:Pipeline
     user_parameters: {}
@@ -572,7 +558,7 @@ entries:
       - pandas:DataFrame
       - pandas:DataFrame
       steps:
-      - - '{data(5ff4f93fb6f993f0)}'
+      - - '{data(c9dbefd12ed0f225)}'
         - []
         - {}
       - - '{func(intake.readers.convert:GenericFunc)}'
@@ -605,12 +591,12 @@ entries:
           height: 300
           hover_cols:
           - date_time
+          - distance [km]
           - Station
           - Depth (m)
-          - Long (E)
-          - distance [km]
           - Lat (N)
           - Temperature (C)
+          - Long (E)
           kind: scatter
           shared_axes: false
           title: 'Cruise 6: 2003-01-31 15:56:00'
@@ -625,19 +611,19 @@ entries:
           height: 300
           hover_cols:
           - date_time
+          - distance [km]
           - Station
           - Depth (m)
-          - Long (E)
-          - distance [km]
           - Lat (N)
           - Temperature (C)
+          - Long (E)
           kind: scatter
           shared_axes: false
           title: 'Cruise 6: 2003-01-31 15:56:00'
           width: 500
           x: distance [km]
           y: Depth (m)
-      urlpath: simplecache://::https://researchworkspace.com/files/42396691/barabara.csv
+      urlpath: https://researchworkspace.com/files/42396691/barabara.csv
     output_instance: pandas:DataFrame
     reader: intake.readers.convert:Pipeline
     user_parameters: {}
@@ -648,7 +634,7 @@ entries:
       - pandas:DataFrame
       - pandas:DataFrame
       steps:
-      - - '{data(5ff4f93fb6f993f0)}'
+      - - '{data(c9dbefd12ed0f225)}'
         - []
         - {}
       - - '{func(intake.readers.convert:GenericFunc)}'
@@ -681,12 +667,12 @@ entries:
           height: 300
           hover_cols:
           - date_time
+          - distance [km]
           - Station
           - Depth (m)
-          - Long (E)
-          - distance [km]
           - Lat (N)
           - Temperature (C)
+          - Long (E)
           kind: scatter
           shared_axes: false
           title: 'Cruise 7: 2003-02-18 16:50:00'
@@ -701,19 +687,19 @@ entries:
           height: 300
           hover_cols:
           - date_time
+          - distance [km]
           - Station
           - Depth (m)
-          - Long (E)
-          - distance [km]
           - Lat (N)
           - Temperature (C)
+          - Long (E)
           kind: scatter
           shared_axes: false
           title: 'Cruise 7: 2003-02-18 16:50:00'
           width: 500
           x: distance [km]
           y: Depth (m)
-      urlpath: simplecache://::https://researchworkspace.com/files/42396691/barabara.csv
+      urlpath: https://researchworkspace.com/files/42396691/barabara.csv
     output_instance: pandas:DataFrame
     reader: intake.readers.convert:Pipeline
     user_parameters: {}
@@ -724,7 +710,7 @@ entries:
       - pandas:DataFrame
       - pandas:DataFrame
       steps:
-      - - '{data(5ff4f93fb6f993f0)}'
+      - - '{data(c9dbefd12ed0f225)}'
         - []
         - {}
       - - '{func(intake.readers.convert:GenericFunc)}'
@@ -757,12 +743,12 @@ entries:
           height: 300
           hover_cols:
           - date_time
+          - distance [km]
           - Station
           - Depth (m)
-          - Long (E)
-          - distance [km]
           - Lat (N)
           - Temperature (C)
+          - Long (E)
           kind: scatter
           shared_axes: false
           title: 'Cruise 8: 2003-03-31 15:27:00'
@@ -777,19 +763,19 @@ entries:
           height: 300
           hover_cols:
           - date_time
+          - distance [km]
           - Station
           - Depth (m)
-          - Long (E)
-          - distance [km]
           - Lat (N)
           - Temperature (C)
+          - Long (E)
           kind: scatter
           shared_axes: false
           title: 'Cruise 8: 2003-03-31 15:27:00'
           width: 500
           x: distance [km]
           y: Depth (m)
-      urlpath: simplecache://::https://researchworkspace.com/files/42396691/barabara.csv
+      urlpath: https://researchworkspace.com/files/42396691/barabara.csv
     output_instance: pandas:DataFrame
     reader: intake.readers.convert:Pipeline
     user_parameters: {}
@@ -800,7 +786,7 @@ entries:
       - pandas:DataFrame
       - pandas:DataFrame
       steps:
-      - - '{data(5ff4f93fb6f993f0)}'
+      - - '{data(c9dbefd12ed0f225)}'
         - []
         - {}
       - - '{func(intake.readers.convert:GenericFunc)}'
@@ -833,12 +819,12 @@ entries:
           height: 300
           hover_cols:
           - date_time
+          - distance [km]
           - Station
           - Depth (m)
-          - Long (E)
-          - distance [km]
           - Lat (N)
           - Temperature (C)
+          - Long (E)
           kind: scatter
           shared_axes: false
           title: 'Cruise 9: 2003-04-17 12:35:00'
@@ -853,29 +839,39 @@ entries:
           height: 300
           hover_cols:
           - date_time
+          - distance [km]
           - Station
           - Depth (m)
-          - Long (E)
-          - distance [km]
           - Lat (N)
           - Temperature (C)
+          - Long (E)
           kind: scatter
           shared_axes: false
           title: 'Cruise 9: 2003-04-17 12:35:00'
           width: 500
           x: distance [km]
           y: Depth (m)
-      urlpath: simplecache://::https://researchworkspace.com/files/42396691/barabara.csv
+      urlpath: https://researchworkspace.com/files/42396691/barabara.csv
     output_instance: pandas:DataFrame
     reader: intake.readers.convert:Pipeline
+    user_parameters: {}
+  c9dbefd12ed0f225:
+    kwargs:
+      args:
+      - '{data(7cec9a7bfdd2fa74)}'
+      parse_dates:
+      - date_time
+    metadata: {}
+    output_instance: pandas:DataFrame
+    reader: intake.readers.readers:PandasCSV
     user_parameters: {}
 metadata:
   featuretype: trajectoryProfile
   header_names: null
   included: true
   key_variables:
-  - temp
   - salt
+  - temp
   map:
     coastline: false
     geo: true
