--- a/cook_inlet_catalogs/catalogs/ctd_transects_uaf.yaml
+++ b/cook_inlet_catalogs/catalogs/ctd_transects_uaf.yaml
@@ -9,28 +9,14 @@ aliases:
   Transect_08: Transect_08
   Transect_09: Transect_09
 data:
-  0fe743491d86c382:
+  36dfdc7aa5208855:
     datatype: intake.readers.datatypes:CSV
     kwargs:
       storage_options: null
-      url: simplecache://::https://researchworkspace.com/files/42202256/TS%20downcasts.csv
+      url: https://researchworkspace.com/files/42202256/TS%20downcasts.csv
     metadata: {}
     user_parameters: {}
 entries:
-  54d75197e2b76b4c:
-    kwargs:
-      args:
-      - '{data(0fe743491d86c382)}'
-      parse_dates:
-      - date_time
-      storage_options:
-        simplecache:
-          cache_storage: /home/kristen/.cache/cook-inlet-catalogs
-          same_names: true
-    metadata: {}
-    output_instance: pandas:DataFrame
-    reader: intake.readers.readers:PandasCSV
-    user_parameters: {}
   Transect_01:
     kwargs:
       out_instances:
@@ -38,7 +24,7 @@ entries:
       - pandas:DataFrame
       - pandas:DataFrame
       steps:
-      - - '{data(54d75197e2b76b4c)}'
+      - - '{data(d3418f3e690c76b1)}'
         - []
         - {}
       - - '{func(intake.readers.convert:GenericFunc)}'
@@ -70,13 +56,13 @@ entries:
           flip_yaxis: true
           height: 300
           hover_cols:
-          - Lat
           - date_time
-          - Station
-          - Pressure
           - distance [km]
-          - Lon
+          - Pressure
           - Temperature
+          - Station
+          - Lon
+          - Lat
           kind: scatter
           shared_axes: false
           title: '2003-08-09 20:36:00'
@@ -90,20 +76,20 @@ entries:
           flip_yaxis: true
           height: 300
           hover_cols:
-          - Lat
           - date_time
-          - Station
-          - Pressure
           - distance [km]
-          - Lon
+          - Pressure
           - Temperature
+          - Station
+          - Lon
+          - Lat
           kind: scatter
           shared_axes: false
           title: '2003-08-09 20:36:00'
           width: 500
           x: distance [km]
           y: Pressure
-      urlpath: simplecache://::https://researchworkspace.com/files/42202256/TS%20downcasts.csv
+      urlpath: https://researchworkspace.com/files/42202256/TS%20downcasts.csv
     output_instance: pandas:DataFrame
     reader: intake.readers.convert:Pipeline
     user_parameters: {}
@@ -114,7 +100,7 @@ entries:
       - pandas:DataFrame
       - pandas:DataFrame
       steps:
-      - - '{data(54d75197e2b76b4c)}'
+      - - '{data(d3418f3e690c76b1)}'
         - []
         - {}
       - - '{func(intake.readers.convert:GenericFunc)}'
@@ -146,13 +132,13 @@ entries:
           flip_yaxis: true
           height: 300
           hover_cols:
-          - Lat
           - date_time
-          - Station
-          - Pressure
           - distance [km]
-          - Lon
+          - Pressure
           - Temperature
+          - Station
+          - Lon
+          - Lat
           kind: scatter
           shared_axes: false
           title: '2003-08-09 23:12:00'
@@ -166,20 +152,20 @@ entries:
           flip_yaxis: true
           height: 300
           hover_cols:
-          - Lat
           - date_time
-          - Station
-          - Pressure
           - distance [km]
-          - Lon
+          - Pressure
           - Temperature
+          - Station
+          - Lon
+          - Lat
           kind: scatter
           shared_axes: false
           title: '2003-08-09 23:12:00'
           width: 500
           x: distance [km]
           y: Pressure
-      urlpath: simplecache://::https://researchworkspace.com/files/42202256/TS%20downcasts.csv
+      urlpath: https://researchworkspace.com/files/42202256/TS%20downcasts.csv
     output_instance: pandas:DataFrame
     reader: intake.readers.convert:Pipeline
     user_parameters: {}
@@ -190,7 +176,7 @@ entries:
       - pandas:DataFrame
       - pandas:DataFrame
       steps:
-      - - '{data(54d75197e2b76b4c)}'
+      - - '{data(d3418f3e690c76b1)}'
         - []
         - {}
       - - '{func(intake.readers.convert:GenericFunc)}'
@@ -222,13 +208,13 @@ entries:
           flip_yaxis: true
           height: 300
           hover_cols:
-          - Lat
           - date_time
-          - Station
-          - Pressure
           - distance [km]
-          - Lon
+          - Pressure
           - Temperature
+          - Station
+          - Lon
+          - Lat
           kind: scatter
           shared_axes: false
           title: '2003-08-10 01:35:00'
@@ -242,20 +228,20 @@ entries:
           flip_yaxis: true
           height: 300
           hover_cols:
-          - Lat
           - date_time
-          - Station
-          - Pressure
           - distance [km]
-          - Lon
+          - Pressure
           - Temperature
+          - Station
+          - Lon
+          - Lat
           kind: scatter
           shared_axes: false
           title: '2003-08-10 01:35:00'
           width: 500
           x: distance [km]
           y: Pressure
-      urlpath: simplecache://::https://researchworkspace.com/files/42202256/TS%20downcasts.csv
+      urlpath: https://researchworkspace.com/files/42202256/TS%20downcasts.csv
     output_instance: pandas:DataFrame
     reader: intake.readers.convert:Pipeline
     user_parameters: {}
@@ -266,7 +252,7 @@ entries:
       - pandas:DataFrame
       - pandas:DataFrame
       steps:
-      - - '{data(54d75197e2b76b4c)}'
+      - - '{data(d3418f3e690c76b1)}'
         - []
         - {}
       - - '{func(intake.readers.convert:GenericFunc)}'
@@ -298,13 +284,13 @@ entries:
           flip_yaxis: true
           height: 300
           hover_cols:
-          - Lat
           - date_time
-          - Station
-          - Pressure
           - distance [km]
-          - Lon
+          - Pressure
           - Temperature
+          - Station
+          - Lon
+          - Lat
           kind: scatter
           shared_axes: false
           title: '2003-08-10 04:14:00'
@@ -318,20 +304,20 @@ entries:
           flip_yaxis: true
           height: 300
           hover_cols:
-          - Lat
           - date_time
-          - Station
-          - Pressure
           - distance [km]
-          - Lon
+          - Pressure
           - Temperature
+          - Station
+          - Lon
+          - Lat
           kind: scatter
           shared_axes: false
           title: '2003-08-10 04:14:00'
           width: 500
           x: distance [km]
           y: Pressure
-      urlpath: simplecache://::https://researchworkspace.com/files/42202256/TS%20downcasts.csv
+      urlpath: https://researchworkspace.com/files/42202256/TS%20downcasts.csv
     output_instance: pandas:DataFrame
     reader: intake.readers.convert:Pipeline
     user_parameters: {}
@@ -342,7 +328,7 @@ entries:
       - pandas:DataFrame
       - pandas:DataFrame
       steps:
-      - - '{data(54d75197e2b76b4c)}'
+      - - '{data(d3418f3e690c76b1)}'
         - []
         - {}
       - - '{func(intake.readers.convert:GenericFunc)}'
@@ -374,13 +360,13 @@ entries:
           flip_yaxis: true
           height: 300
           hover_cols:
-          - Lat
           - date_time
-          - Station
-          - Pressure
           - distance [km]
-          - Lon
+          - Pressure
           - Temperature
+          - Station
+          - Lon
+          - Lat
           kind: scatter
           shared_axes: false
           title: '2003-08-10 07:16:00'
@@ -394,20 +380,20 @@ entries:
           flip_yaxis: true
           height: 300
           hover_cols:
-          - Lat
           - date_time
-          - Station
-          - Pressure
           - distance [km]
-          - Lon
+          - Pressure
           - Temperature
+          - Station
+          - Lon
+          - Lat
           kind: scatter
           shared_axes: false
           title: '2003-08-10 07:16:00'
           width: 500
           x: distance [km]
           y: Pressure
-      urlpath: simplecache://::https://researchworkspace.com/files/42202256/TS%20downcasts.csv
+      urlpath: https://researchworkspace.com/files/42202256/TS%20downcasts.csv
     output_instance: pandas:DataFrame
     reader: intake.readers.convert:Pipeline
     user_parameters: {}
@@ -418,7 +404,7 @@ entries:
       - pandas:DataFrame
       - pandas:DataFrame
       steps:
-      - - '{data(54d75197e2b76b4c)}'
+      - - '{data(d3418f3e690c76b1)}'
         - []
         - {}
       - - '{func(intake.readers.convert:GenericFunc)}'
@@ -450,13 +436,13 @@ entries:
           flip_yaxis: true
           height: 300
           hover_cols:
-          - Lat
           - date_time
-          - Station
-          - Pressure
           - distance [km]
-          - Lon
+          - Pressure
           - Temperature
+          - Station
+          - Lon
+          - Lat
           kind: scatter
           shared_axes: false
           title: '2003-08-10 10:11:00'
@@ -470,20 +456,20 @@ entries:
           flip_yaxis: true
           height: 300
           hover_cols:
-          - Lat
           - date_time
-          - Station
-          - Pressure
           - distance [km]
-          - Lon
+          - Pressure
           - Temperature
+          - Station
+          - Lon
+          - Lat
           kind: scatter
           shared_axes: false
           title: '2003-08-10 10:11:00'
           width: 500
           x: distance [km]
           y: Pressure
-      urlpath: simplecache://::https://researchworkspace.com/files/42202256/TS%20downcasts.csv
+      urlpath: https://researchworkspace.com/files/42202256/TS%20downcasts.csv
     output_instance: pandas:DataFrame
     reader: intake.readers.convert:Pipeline
     user_parameters: {}
@@ -494,7 +480,7 @@ entries:
       - pandas:DataFrame
       - pandas:DataFrame
       steps:
-      - - '{data(54d75197e2b76b4c)}'
+      - - '{data(d3418f3e690c76b1)}'
         - []
         - {}
       - - '{func(intake.readers.convert:GenericFunc)}'
@@ -526,13 +512,13 @@ entries:
           flip_yaxis: true
           height: 300
           hover_cols:
-          - Lat
           - date_time
-          - Station
-          - Pressure
           - distance [km]
-          - Lon
+          - Pressure
           - Temperature
+          - Station
+          - Lon
+          - Lat
           kind: scatter
           shared_axes: false
           title: '2003-08-10 14:01:00'
@@ -546,20 +532,20 @@ entries:
           flip_yaxis: true
           height: 300
           hover_cols:
-          - Lat
           - date_time
-          - Station
-          - Pressure
           - distance [km]
-          - Lon
+          - Pressure
           - Temperature
+          - Station
+          - Lon
+          - Lat
           kind: scatter
           shared_axes: false
           title: '2003-08-10 14:01:00'
           width: 500
           x: distance [km]
           y: Pressure
-      urlpath: simplecache://::https://researchworkspace.com/files/42202256/TS%20downcasts.csv
+      urlpath: https://researchworkspace.com/files/42202256/TS%20downcasts.csv
     output_instance: pandas:DataFrame
     reader: intake.readers.convert:Pipeline
     user_parameters: {}
@@ -570,7 +556,7 @@ entries:
       - pandas:DataFrame
       - pandas:DataFrame
       steps:
-      - - '{data(54d75197e2b76b4c)}'
+      - - '{data(d3418f3e690c76b1)}'
         - []
         - {}
       - - '{func(intake.readers.convert:GenericFunc)}'
@@ -602,13 +588,13 @@ entries:
           flip_yaxis: true
           height: 300
           hover_cols:
-          - Lat
           - date_time
-          - Station
-          - Pressure
           - distance [km]
-          - Lon
+          - Pressure
           - Temperature
+          - Station
+          - Lon
+          - Lat
           kind: scatter
           shared_axes: false
           title: '2003-08-10 17:09:00'
@@ -622,20 +608,20 @@ entries:
           flip_yaxis: true
           height: 300
           hover_cols:
-          - Lat
           - date_time
-          - Station
-          - Pressure
           - distance [km]
-          - Lon
+          - Pressure
           - Temperature
+          - Station
+          - Lon
+          - Lat
           kind: scatter
           shared_axes: false
           title: '2003-08-10 17:09:00'
           width: 500
           x: distance [km]
           y: Pressure
-      urlpath: simplecache://::https://researchworkspace.com/files/42202256/TS%20downcasts.csv
+      urlpath: https://researchworkspace.com/files/42202256/TS%20downcasts.csv
     output_instance: pandas:DataFrame
     reader: intake.readers.convert:Pipeline
     user_parameters: {}
@@ -646,7 +632,7 @@ entries:
       - pandas:DataFrame
       - pandas:DataFrame
       steps:
-      - - '{data(54d75197e2b76b4c)}'
+      - - '{data(d3418f3e690c76b1)}'
         - []
         - {}
       - - '{func(intake.readers.convert:GenericFunc)}'
@@ -678,13 +664,13 @@ entries:
           flip_yaxis: true
           height: 300
           hover_cols:
-          - Lat
           - date_time
-          - Station
-          - Pressure
           - distance [km]
-          - Lon
+          - Pressure
           - Temperature
+          - Station
+          - Lon
+          - Lat
           kind: scatter
           shared_axes: false
           title: '2003-08-10 20:26:00'
@@ -698,30 +684,40 @@ entries:
           flip_yaxis: true
           height: 300
           hover_cols:
-          - Lat
           - date_time
-          - Station
-          - Pressure
           - distance [km]
-          - Lon
+          - Pressure
           - Temperature
+          - Station
+          - Lon
+          - Lat
           kind: scatter
           shared_axes: false
           title: '2003-08-10 20:26:00'
           width: 500
           x: distance [km]
           y: Pressure
-      urlpath: simplecache://::https://researchworkspace.com/files/42202256/TS%20downcasts.csv
+      urlpath: https://researchworkspace.com/files/42202256/TS%20downcasts.csv
     output_instance: pandas:DataFrame
     reader: intake.readers.convert:Pipeline
+    user_parameters: {}
+  d3418f3e690c76b1:
+    kwargs:
+      args:
+      - '{data(36dfdc7aa5208855)}'
+      parse_dates:
+      - date_time
+    metadata: {}
+    output_instance: pandas:DataFrame
+    reader: intake.readers.readers:PandasCSV
     user_parameters: {}
 metadata:
   featuretype: trajectoryProfile
   header_names: null
   included: true
   key_variables:
-  - temp
   - salt
+  - temp
   map:
     coastline: false
     geo: true
