--- a/cook_inlet_catalogs/catalogs/hfradar.yaml
+++ b/cook_inlet_catalogs/catalogs/hfradar.yaml
@@ -15,176 +15,131 @@ aliases:
   upper-ci_system-A_2009_subtidal_weekly_mean: upper-ci_system-A_2009_subtidal_weekly_mean
   upper-ci_system-A_2009_tidecons: upper-ci_system-A_2009_tidecons
 data:
-  02fc390fe7bcfb9e:
+  04ded7770d69fced:
     datatype: intake.readers.datatypes:HDF5
     kwargs:
       path: ''
-      storage_options:
-        simplecache:
-          cache_storage: /home/kristen/.cache/cook-inlet-catalogs
-          same_names: true
-      url: simplecache://::https://researchworkspace.com/files/42712163/upper-ci_system-A_2002-2003.nc
-    metadata: {}
-    user_parameters: {}
-  17bd4fa09aa0ef46:
-    datatype: intake.readers.datatypes:HDF5
-    kwargs:
-      path: ''
-      storage_options:
-        simplecache:
-          cache_storage: /home/kristen/.cache/cook-inlet-catalogs
-          same_names: true
-      url: simplecache://::https://researchworkspace.com/files/44879879/upper-ci_system-A_2003_tidecons_base.nc
-    metadata: {}
-    user_parameters: {}
-  248b9c508e15d842:
-    datatype: intake.readers.datatypes:HDF5
-    kwargs:
-      path: ''
-      storage_options:
-        simplecache:
-          cache_storage: /home/kristen/.cache/cook-inlet-catalogs
-          same_names: true
-      url: simplecache://::https://researchworkspace.com/files/42712200/upper-ci_system-A_2009_tidecons_base.nc
-    metadata: {}
-    user_parameters: {}
-  24ec3ff1ae9e7f60:
-    datatype: intake.readers.datatypes:HDF5
-    kwargs:
-      path: ''
-      storage_options:
-        simplecache:
-          cache_storage: /home/kristen/.cache/cook-inlet-catalogs
-          same_names: true
-      url: simplecache://::https://researchworkspace.com/files/44879896/lower-ci_system-B_2006_subtidal_weekly_mean.nc
-    metadata: {}
-    user_parameters: {}
-  3052a4caf01d6b47:
-    datatype: intake.readers.datatypes:HDF5
-    kwargs:
-      path: ''
-      storage_options:
-        simplecache:
-          cache_storage: /home/kristen/.cache/cook-inlet-catalogs
-          same_names: true
-      url: simplecache://::https://researchworkspace.com/files/42712190/lower-ci_system-B_2006-2007_tidecons_base.nc
-    metadata: {}
-    user_parameters: {}
-  5517a2fa435f42ca:
-    datatype: intake.readers.datatypes:HDF5
-    kwargs:
-      path: ''
-      storage_options:
-        simplecache:
-          cache_storage: /home/kristen/.cache/cook-inlet-catalogs
-          same_names: true
-      url: simplecache://::https://researchworkspace.com/files/44879883/lower-ci_system-B_2006_subtidal_daily_mean.nc
-    metadata: {}
-    user_parameters: {}
-  5a9ad9b3eb352c5d:
-    datatype: intake.readers.datatypes:HDF5
-    kwargs:
-      path: ''
-      storage_options:
-        simplecache:
-          cache_storage: /home/kristen/.cache/cook-inlet-catalogs
-          same_names: true
-      url: simplecache://::https://researchworkspace.com/files/42712165/lower-ci_system-B_2006-2007.nc
-    metadata: {}
-    user_parameters: {}
-  616e08565ce8aa38:
-    datatype: intake.readers.datatypes:HDF5
-    kwargs:
-      path: ''
-      storage_options:
-        simplecache:
-          cache_storage: /home/kristen/.cache/cook-inlet-catalogs
-          same_names: true
-      url: simplecache://::https://researchworkspace.com/files/42712214/upper-ci_system-A_2009_subtidal_weekly_mean.nc
-    metadata: {}
-    user_parameters: {}
-  77bae6224f6abab2:
-    datatype: intake.readers.datatypes:HDF5
-    kwargs:
-      path: ''
-      storage_options:
-        simplecache:
-          cache_storage: /home/kristen/.cache/cook-inlet-catalogs
-          same_names: true
-      url: simplecache://::https://researchworkspace.com/files/42712206/upper-ci_system-A_2002-2003_subtidal_weekly_mean.nc
-    metadata: {}
-    user_parameters: {}
-  939d50167e9acb1c:
-    datatype: intake.readers.datatypes:HDF5
-    kwargs:
-      path: ''
-      storage_options:
-        simplecache:
-          cache_storage: /home/kristen/.cache/cook-inlet-catalogs
-          same_names: true
+      storage_options: null
       url: simplecache://::https://researchworkspace.com/files/42712210/lower-ci_system-B_2006-2007_subtidal_weekly_mean.nc
     metadata: {}
     user_parameters: {}
-  93b3e87647096265:
+  1117ca0df34ccd1f:
     datatype: intake.readers.datatypes:HDF5
     kwargs:
       path: ''
-      storage_options:
-        simplecache:
-          cache_storage: /home/kristen/.cache/cook-inlet-catalogs
-          same_names: true
+      storage_options: null
+      url: simplecache://::https://researchworkspace.com/files/42712206/upper-ci_system-A_2002-2003_subtidal_weekly_mean.nc
+    metadata: {}
+    user_parameters: {}
+  28546c0863a8caac:
+    datatype: intake.readers.datatypes:HDF5
+    kwargs:
+      path: ''
+      storage_options: null
       url: simplecache://::https://researchworkspace.com/files/44879877/upper-ci_system-A_2003_subtidal_daily_mean.nc
     metadata: {}
     user_parameters: {}
-  a04b50947249257d:
+  3057834667927ec4:
     datatype: intake.readers.datatypes:HDF5
     kwargs:
       path: ''
-      storage_options:
-        simplecache:
-          cache_storage: /home/kristen/.cache/cook-inlet-catalogs
-          same_names: true
+      storage_options: null
+      url: simplecache://::https://researchworkspace.com/files/42712165/lower-ci_system-B_2006-2007.nc
+    metadata: {}
+    user_parameters: {}
+  404008e431bec77a:
+    datatype: intake.readers.datatypes:HDF5
+    kwargs:
+      path: ''
+      storage_options: null
+      url: simplecache://::https://researchworkspace.com/files/44879894/upper-ci_system-A_2003_subtidal_weekly_mean.nc
+    metadata: {}
+    user_parameters: {}
+  6737586fd86bada1:
+    datatype: intake.readers.datatypes:HDF5
+    kwargs:
+      path: ''
+      storage_options: null
+      url: simplecache://::https://researchworkspace.com/files/42712214/upper-ci_system-A_2009_subtidal_weekly_mean.nc
+    metadata: {}
+    user_parameters: {}
+  7e9c42b71fff2552:
+    datatype: intake.readers.datatypes:HDF5
+    kwargs:
+      path: ''
+      storage_options: null
       url: simplecache://::https://researchworkspace.com/files/44879885/lower-ci_system-B_2006_tidecons_base.nc
     metadata: {}
     user_parameters: {}
-  d3d12989eff72212:
+  869d166f31953ed0:
     datatype: intake.readers.datatypes:HDF5
     kwargs:
       path: ''
-      storage_options:
-        simplecache:
-          cache_storage: /home/kristen/.cache/cook-inlet-catalogs
-          same_names: true
+      storage_options: null
+      url: simplecache://::https://researchworkspace.com/files/44879883/lower-ci_system-B_2006_subtidal_daily_mean.nc
+    metadata: {}
+    user_parameters: {}
+  8dd1c812aa44a8fc:
+    datatype: intake.readers.datatypes:HDF5
+    kwargs:
+      path: ''
+      storage_options: null
+      url: simplecache://::https://researchworkspace.com/files/42712190/lower-ci_system-B_2006-2007_tidecons_base.nc
+    metadata: {}
+    user_parameters: {}
+  9826bafe85e2af0d:
+    datatype: intake.readers.datatypes:HDF5
+    kwargs:
+      path: ''
+      storage_options: null
+      url: simplecache://::https://researchworkspace.com/files/42712163/upper-ci_system-A_2002-2003.nc
+    metadata: {}
+    user_parameters: {}
+  a0d13da822cbe4dd:
+    datatype: intake.readers.datatypes:HDF5
+    kwargs:
+      path: ''
+      storage_options: null
+      url: simplecache://::https://researchworkspace.com/files/44879879/upper-ci_system-A_2003_tidecons_base.nc
+    metadata: {}
+    user_parameters: {}
+  bb93f99350577317:
+    datatype: intake.readers.datatypes:HDF5
+    kwargs:
+      path: ''
+      storage_options: null
+      url: simplecache://::https://researchworkspace.com/files/42712200/upper-ci_system-A_2009_tidecons_base.nc
+    metadata: {}
+    user_parameters: {}
+  bc68f4cc229299e8:
+    datatype: intake.readers.datatypes:HDF5
+    kwargs:
+      path: ''
+      storage_options: null
       url: simplecache://::https://researchworkspace.com/files/42712167/upper-ci_system-A_2009.nc
     metadata: {}
     user_parameters: {}
-  e0d514136d2b5f55:
+  ca462c7b94f6a1af:
     datatype: intake.readers.datatypes:HDF5
     kwargs:
       path: ''
-      storage_options:
-        simplecache:
-          cache_storage: /home/kristen/.cache/cook-inlet-catalogs
-          same_names: true
+      storage_options: null
       url: simplecache://::https://researchworkspace.com/files/42712182/upper-ci_system-A_2002-2003_tidecons_base.nc
     metadata: {}
     user_parameters: {}
-  fd04dd17f8f0fbe6:
+  fd397eba7d582388:
     datatype: intake.readers.datatypes:HDF5
     kwargs:
       path: ''
-      storage_options:
-        simplecache:
-          cache_storage: /home/kristen/.cache/cook-inlet-catalogs
-          same_names: true
-      url: simplecache://::https://researchworkspace.com/files/44879894/upper-ci_system-A_2003_subtidal_weekly_mean.nc
+      storage_options: null
+      url: simplecache://::https://researchworkspace.com/files/44879896/lower-ci_system-B_2006_subtidal_weekly_mean.nc
     metadata: {}
     user_parameters: {}
 entries:
   lower-ci_system-B_2006-2007:
     kwargs:
       chunks: {}
-      data: '{data(5a9ad9b3eb352c5d)}'
+      data: '{data(3057834667927ec4)}'
     metadata:
       featuretype: grid
       key_variables: []
@@ -249,7 +204,7 @@ entries:
   lower-ci_system-B_2006-2007_subtidal_weekly_mean:
     kwargs:
       chunks: {}
-      data: '{data(939d50167e9acb1c)}'
+      data: '{data(04ded7770d69fced)}'
     metadata:
       featuretype: grid
       key_variables: []
@@ -305,7 +260,7 @@ entries:
   lower-ci_system-B_2006-2007_tidecons:
     kwargs:
       chunks: {}
-      data: '{data(3052a4caf01d6b47)}'
+      data: '{data(8dd1c812aa44a8fc)}'
     metadata:
       featuretype: grid
       key_variables: []
@@ -345,7 +300,7 @@ entries:
   lower-ci_system-B_2006_subtidal_daily_mean:
     kwargs:
       chunks: {}
-      data: '{data(5517a2fa435f42ca)}'
+      data: '{data(869d166f31953ed0)}'
     metadata:
       featuretype: grid
       key_variables: []
@@ -401,7 +356,7 @@ entries:
   lower-ci_system-B_2006_subtidal_weekly_mean:
     kwargs:
       chunks: {}
-      data: '{data(24ec3ff1ae9e7f60)}'
+      data: '{data(fd397eba7d582388)}'
     metadata:
       featuretype: grid
       key_variables: []
@@ -457,7 +412,7 @@ entries:
   lower-ci_system-B_2006_tidecons:
     kwargs:
       chunks: {}
-      data: '{data(a04b50947249257d)}'
+      data: '{data(7e9c42b71fff2552)}'
     metadata:
       featuretype: grid
       key_variables: []
@@ -497,7 +452,7 @@ entries:
   upper-ci_system-A_2002-2003:
     kwargs:
       chunks: {}
-      data: '{data(02fc390fe7bcfb9e)}'
+      data: '{data(9826bafe85e2af0d)}'
     metadata:
       featuretype: grid
       key_variables: []
@@ -562,7 +517,7 @@ entries:
   upper-ci_system-A_2002-2003_subtidal_weekly_mean:
     kwargs:
       chunks: {}
-      data: '{data(77bae6224f6abab2)}'
+      data: '{data(1117ca0df34ccd1f)}'
     metadata:
       featuretype: grid
       key_variables: []
@@ -618,7 +573,7 @@ entries:
   upper-ci_system-A_2002-2003_tidecons:
     kwargs:
       chunks: {}
-      data: '{data(e0d514136d2b5f55)}'
+      data: '{data(ca462c7b94f6a1af)}'
     metadata:
       featuretype: grid
       key_variables: []
@@ -658,7 +613,7 @@ entries:
   upper-ci_system-A_2003_subtidal_daily_mean:
     kwargs:
       chunks: {}
-      data: '{data(93b3e87647096265)}'
+      data: '{data(28546c0863a8caac)}'
     metadata:
       featuretype: grid
       key_variables: []
@@ -714,7 +669,7 @@ entries:
   upper-ci_system-A_2003_subtidal_weekly_mean:
     kwargs:
       chunks: {}
-      data: '{data(fd04dd17f8f0fbe6)}'
+      data: '{data(404008e431bec77a)}'
     metadata:
       featuretype: grid
       key_variables: []
@@ -770,7 +725,7 @@ entries:
   upper-ci_system-A_2003_tidecons:
     kwargs:
       chunks: {}
-      data: '{data(17bd4fa09aa0ef46)}'
+      data: '{data(a0d13da822cbe4dd)}'
     metadata:
       featuretype: grid
       key_variables: []
@@ -810,7 +765,7 @@ entries:
   upper-ci_system-A_2009:
     kwargs:
       chunks: {}
-      data: '{data(d3d12989eff72212)}'
+      data: '{data(bc68f4cc229299e8)}'
     metadata:
       featuretype: grid
       key_variables: []
@@ -875,7 +830,7 @@ entries:
   upper-ci_system-A_2009_subtidal_weekly_mean:
     kwargs:
       chunks: {}
-      data: '{data(616e08565ce8aa38)}'
+      data: '{data(6737586fd86bada1)}'
     metadata:
       featuretype: grid
       key_variables: []
@@ -931,7 +886,7 @@ entries:
   upper-ci_system-A_2009_tidecons:
     kwargs:
       chunks: {}
-      data: '{data(248b9c508e15d842)}'
+      data: '{data(bb93f99350577317)}'
     metadata:
       featuretype: grid
       key_variables: []
