--- a/cook_inlet_catalogs/catalogs/moorings_noaa.yaml
+++ b/cook_inlet_catalogs/catalogs/moorings_noaa.yaml
@@ -13,10 +13,7 @@ data:
   boulder-point:
     datatype: intake_erddap.erddap:TableDAPReader
     kwargs:
-      cache_kwargs:
-        simplecache:
-          cache_storage: /home/kristen/.cache/cook-inlet-catalogs
-          same_names: true
+      cache_kwargs: null
       constraints:
         time>=: '1999-01-01T00:00:00Z'
       dataset_id: boulder-point
@@ -61,12 +58,12 @@ data:
         data:
           height: 300
           hover_cols:
-          - longitude
-          - station
-          - latitude
           - time
           - z
+          - station
+          - latitude
           - water_surface_above_station_datum
+          - longitude
           kind: line
           legend: top
           shared_axes: false
@@ -86,10 +83,7 @@ data:
   geese-island-gps-tide-buoy:
     datatype: intake_erddap.erddap:TableDAPReader
     kwargs:
-      cache_kwargs:
-        simplecache:
-          cache_storage: /home/kristen/.cache/cook-inlet-catalogs
-          same_names: true
+      cache_kwargs: null
       constraints:
         time>=: '1999-01-01T00:00:00Z'
       dataset_id: geese-island-gps-tide-buoy
@@ -134,12 +128,12 @@ data:
         data:
           height: 300
           hover_cols:
-          - longitude
-          - station
-          - latitude
           - time
           - z
+          - station
+          - latitude
           - water_surface_above_station_datum
+          - longitude
           kind: line
           legend: top
           shared_axes: false
@@ -159,10 +153,7 @@ data:
   noaa_nos_co_ops_9455500:
     datatype: intake_erddap.erddap:TableDAPReader
     kwargs:
-      cache_kwargs:
-        simplecache:
-          cache_storage: /home/kristen/.cache/cook-inlet-catalogs
-          same_names: true
+      cache_kwargs: null
       constraints:
         time>=: '1999-01-01T00:00:00Z'
       dataset_id: noaa_nos_co_ops_9455500
@@ -200,7 +191,7 @@ data:
       maptype: point
       maxLatitude: 59.440528
       maxLongitude: -151.719944
-      maxTime: '2025-10-23T16:12:00Z'
+      maxTime: '2025-10-23T19:18:00Z'
       minLatitude: 59.440528
       minLongitude: -151.719944
       minTime: '1975-07-12T10:00:00Z'
@@ -208,13 +199,13 @@ data:
         data:
           height: 300
           hover_cols:
-          - longitude
+          - time
+          - z
           - sea_water_temperature
           - station
           - latitude
-          - time
-          - z
           - water_surface_above_station_datum
+          - longitude
           kind: line
           legend: top
           shared_axes: false
@@ -236,10 +227,7 @@ data:
   noaa_nos_co_ops_9455595:
     datatype: intake_erddap.erddap:TableDAPReader
     kwargs:
-      cache_kwargs:
-        simplecache:
-          cache_storage: /home/kristen/.cache/cook-inlet-catalogs
-          same_names: true
+      cache_kwargs: null
       constraints:
         time>=: '1999-01-01T00:00:00Z'
       dataset_id: noaa_nos_co_ops_9455595
@@ -276,7 +264,7 @@ data:
       maptype: point
       maxLatitude: 59.725
       maxLongitude: -151.023
-      maxTime: '2025-10-30T14:00:00Z'
+      maxTime: '2025-10-30T18:00:00Z'
       minLatitude: 59.725
       minLongitude: -151.023
       minTime: '2008-07-03T23:00:00Z'
@@ -284,12 +272,12 @@ data:
         data:
           height: 300
           hover_cols:
-          - longitude
-          - station
-          - latitude
           - time
           - z
+          - station
+          - latitude
           - water_surface_above_station_datum
+          - longitude
           kind: line
           legend: top
           shared_axes: false
@@ -309,10 +297,7 @@ data:
   noaa_nos_co_ops_9455920:
     datatype: intake_erddap.erddap:TableDAPReader
     kwargs:
-      cache_kwargs:
-        simplecache:
-          cache_storage: /home/kristen/.cache/cook-inlet-catalogs
-          same_names: true
+      cache_kwargs: null
       constraints:
         time>=: '1999-01-01T00:00:00Z'
       dataset_id: noaa_nos_co_ops_9455920
@@ -350,7 +335,7 @@ data:
       maptype: point
       maxLatitude: 61.2375
       maxLongitude: -149.8904
-      maxTime: '2025-10-23T16:18:00Z'
+      maxTime: '2025-10-23T19:18:00Z'
       minLatitude: 61.2375
       minLongitude: -149.8904
       minTime: '1978-10-02T05:00:00Z'
@@ -358,13 +343,13 @@ data:
         data:
           height: 300
           hover_cols:
-          - longitude
+          - time
+          - z
           - sea_water_temperature
           - station
           - latitude
-          - time
-          - z
           - water_surface_above_station_datum
+          - longitude
           kind: line
           legend: top
           shared_axes: false
@@ -386,10 +371,7 @@ data:
   noaa_nos_co_ops_9457292:
     datatype: intake_erddap.erddap:TableDAPReader
     kwargs:
-      cache_kwargs:
-        simplecache:
-          cache_storage: /home/kristen/.cache/cook-inlet-catalogs
-          same_names: true
+      cache_kwargs: null
       constraints:
         time>=: '1999-01-01T00:00:00Z'
       dataset_id: noaa_nos_co_ops_9457292
@@ -427,7 +409,7 @@ data:
       maptype: point
       maxLatitude: 57.730278
       maxLongitude: -152.513889
-      maxTime: '2025-10-23T16:18:00Z'
+      maxTime: '2025-10-23T19:18:00Z'
       minLatitude: 57.730278
       minLongitude: -152.513889
       minTime: '1984-07-11T02:00:00Z'
@@ -435,13 +417,13 @@ data:
         data:
           height: 300
           hover_cols:
-          - longitude
+          - time
+          - z
           - sea_water_temperature
           - station
           - latitude
-          - time
-          - z
           - water_surface_above_station_datum
+          - longitude
           kind: line
           legend: top
           shared_axes: false
@@ -463,10 +445,7 @@ data:
   noaa_nos_co_ops_9457804:
     datatype: intake_erddap.erddap:TableDAPReader
     kwargs:
-      cache_kwargs:
-        simplecache:
-          cache_storage: /home/kristen/.cache/cook-inlet-catalogs
-          same_names: true
+      cache_kwargs: null
       constraints:
         time>=: '1999-01-01T00:00:00Z'
       dataset_id: noaa_nos_co_ops_9457804
@@ -512,13 +491,13 @@ data:
         data:
           height: 300
           hover_cols:
-          - longitude
+          - time
+          - z
           - sea_water_temperature
           - station
           - latitude
-          - time
-          - z
           - water_surface_above_station_datum
+          - longitude
           kind: line
           legend: top
           shared_axes: false
@@ -540,10 +519,7 @@ data:
   old-harbor-1:
     datatype: intake_erddap.erddap:TableDAPReader
     kwargs:
-      cache_kwargs:
-        simplecache:
-          cache_storage: /home/kristen/.cache/cook-inlet-catalogs
-          same_names: true
+      cache_kwargs: null
       constraints:
         time>=: '1999-01-01T00:00:00Z'
       dataset_id: old-harbor-1
@@ -587,12 +563,12 @@ data:
         data:
           height: 300
           hover_cols:
-          - longitude
-          - station
-          - latitude
           - time
           - z
+          - station
+          - latitude
           - water_surface_above_station_datum
+          - longitude
           kind: line
           legend: top
           shared_axes: false
@@ -612,10 +588,7 @@ data:
   sitkalidak-island-gps-tide-bu:
     datatype: intake_erddap.erddap:TableDAPReader
     kwargs:
-      cache_kwargs:
-        simplecache:
-          cache_storage: /home/kristen/.cache/cook-inlet-catalogs
-          same_names: true
+      cache_kwargs: null
       constraints:
         time>=: '1999-01-01T00:00:00Z'
       dataset_id: sitkalidak-island-gps-tide-bu
@@ -660,12 +633,12 @@ data:
         data:
           height: 300
           hover_cols:
-          - longitude
-          - station
-          - latitude
           - time
           - z
+          - station
+          - latitude
           - water_surface_above_station_datum
+          - longitude
           kind: line
           legend: top
           shared_axes: false
@@ -685,10 +658,7 @@ data:
   wmo_46077:
     datatype: intake_erddap.erddap:TableDAPReader
     kwargs:
-      cache_kwargs:
-        simplecache:
-          cache_storage: /home/kristen/.cache/cook-inlet-catalogs
-          same_names: true
+      cache_kwargs: null
       constraints:
         time>=: '1999-01-01T00:00:00Z'
       dataset_id: wmo_46077
@@ -724,7 +694,7 @@ data:
       maptype: point
       maxLatitude: 57.892
       maxLongitude: -154.291
-      maxTime: '2025-10-23T16:40:00Z'
+      maxTime: '2025-10-23T18:50:00Z'
       minLatitude: 57.892
       minLongitude: -154.291
       minTime: '2006-01-01T00:00:00Z'
@@ -732,12 +702,12 @@ data:
         data:
           height: 300
           hover_cols:
-          - longitude
+          - time
+          - sea_surface_temperature
+          - z
           - station
           - latitude
-          - sea_surface_temperature
-          - time
-          - z
+          - longitude
           kind: line
           legend: top
           shared_axes: false
@@ -801,7 +771,7 @@ metadata:
   maptype: point
   maxLatitude: 61.2375
   maxLongitude: -149.8904
-  maxTime: '2025-10-30T14:00:00Z'
+  maxTime: '2025-10-30T18:00:00Z'
   minLatitude: 56.594694
   minLongitude: -154.291
   minTime: '1975-07-12T10:00:00Z'
